Cambio de enlances

--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 									Calle Colima Mz i Lt 12
 								</li>
 								<li class="icon solid fa-phone">(+51) 924-840-363</li>
-								<li class="icon solid fa-envelope"><a href="#">estrellaig29@gmail.com</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">https://www.facebook.com/</a></li>
-								<li class="icon brands fa-instagram"><a href="#">https://www.instagram.com/irania.galvez.50/</a></li>
+								<li class="icon solid fa-envelope"><a href="https://sites.google.com/view/bitacora-lab-2/p%C3%A1gina-principal?authuser=0">Blog Site</a></li>
+								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/irania.galvez.50">Facebook</a></li>
+								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/irania.galvez.50/">Instagram</a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
